--- a/FixMyRideApp/app/src/main/res/drawable/spinner_background.xml
+++ b/FixMyRideApp/app/src/main/res/drawable/spinner_background.xml
@@ -13,5 +13,5 @@
     <!-- Optional: Add a stroke for a clean border -->
     <stroke
         android:width="1dp"
-        android:color="#1F2224" />
+        android:color="@color/button_color" />
 </shape>
