--- a/FixMyRideApp/app/src/main/res/layout/activity_images.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_images.xml
@@ -12,7 +12,7 @@
             android:id="@+id/headerLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@color/button_color"
             android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -21,29 +21,29 @@
 
             <TextView
                 android:id="@+id/titleText"
-                style="@style/HeaderTextStyle"
+                style="@style/HeaderTextStyle3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="48dp"
+                android:layout_marginEnd="108dp"
                 android:text="@string/detect_damage"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.521" />
+                app:layout_constraintVertical_bias="0.483" />
 
             <ImageButton
                 android:id="@+id/logoutButton"
-                style="@style/HeaderButtonStyle"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                style="@style/FooterButtonStyle"
+                android:layout_width="67dp"
+                android:layout_height="63dp"
                 android:contentDescription="@string/logout_description"
                 android:src="@drawable/round_keyboard_double_arrow_left_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.046"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.051" />
+                app:layout_constraintVertical_bias="1.0" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -90,6 +90,7 @@
         android:layout_height="wrap_content"
         android:background="@color/footer_color"
         android:padding="5dp"
+        android:fadingEdge="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -106,12 +107,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:layout_width="70dp"
-            android:layout_height="70dp"
             android:id="@+id/galleryButton"
             style="@style/FooterButtonStyle"
+            android:layout_width="73dp"
+            android:layout_height="59dp"
             android:contentDescription="@string/gallery_description"
-            android:src="@drawable/baseline_add_photo_alternate_24" />
+            android:src="@drawable/png_c1amw2"
+            tools:layout_editor_absoluteY="16dp" />
 
         <ImageButton
             android:layout_width="70dp"
@@ -119,13 +121,13 @@
             android:id="@+id/cameraButton"
             style="@style/FooterButtonStyle"
             android:contentDescription="@string/camera_description"
-            android:src="@drawable/baseline_add_a_photo_24" />
+            android:src="@drawable/png_iuxem2" />
 
         <ImageButton
             android:layout_height="70dp"
             android:layout_width="70dp"
             android:id="@+id/createReportButton"
-            style="@style/FooterButtonStyle"
+            style="@style/FooterButtonStyleYes"
             android:contentDescription="@string/create_report_description"
             android:src="@drawable/round_done_outline_24" />
 
@@ -133,7 +135,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:id="@+id/clearImagesButton"
-            style="@style/FooterButtonStyle"
+            style="@style/FooterButtonStyleNo"
             android:contentDescription="@string/clear_images_description"
             android:src="@drawable/baseline_remove_circle_outline_24" />
 
