--- a/FixMyRideApp/app/src/main/res/layout/activity_login.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/ic_launcher_background"
+    android:background="@color/white"
     tools:context=".LogInActivity">
 
     <ImageView
@@ -45,7 +45,7 @@
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColorHint="@color/white"
-            android:textColor="@color/text_color"
+            android:textColor="@color/button_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -62,7 +62,7 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:textColorHint="@color/white"
-            android:textColor="@color/text_color"
+            android:textColor="@color/button_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/emailEditText" />
@@ -75,11 +75,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="@color/button_color"
-            android:fontFamily="monospace"
-            android:textSize="18dp"
             android:text="Login"
-            android:textColor="@color/text_color"
+            style="@style/PrimaryButtonStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
@@ -93,10 +90,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="To Sign Up"
-            android:backgroundTint="@color/button_color"
-            android:fontFamily="monospace"
-            android:textSize="18dp"
-            android:textColor="@color/text_color"
+            style="@style/PrimaryButtonStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/loginButton" />
@@ -109,10 +103,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="Forgot Password"
-            android:backgroundTint="@color/button_color"
-            android:fontFamily="monospace"
-            android:textSize="18dp"
-            android:textColor="@color/text_color"
+            style="@style/PrimaryButtonStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/registerButton" />
