--- a/FixMyRideApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_launcher_background"
+    android:background="@color/white"
     tools:context=".SignUpActivity">
 
     <ImageView
@@ -85,9 +85,7 @@
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
             android:text="To Login"
-            android:fontFamily="monospace"
-            android:textColor="@color/text_color"
-            android:background="@color/button_color"/>
+            style="@style/PrimaryButtonStyle"/>
 
         <Button
             android:id="@+id/signUpButton"
@@ -95,9 +93,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginStart="8dp"
-            android:fontFamily="monospace"
             android:text="Sign Up"
-            android:background="@color/button_color"/>
+            style="@style/PrimaryButtonStyle"/>
 
     </LinearLayout>
     </LinearLayout>
