--- a/FixMyRideApp/app/src/main/res/values/styles.xml
+++ b/FixMyRideApp/app/src/main/res/values/styles.xml
@@ -9,7 +9,14 @@
         <item name="android:textColor">@color/button_color</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">35sp</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="HeaderTextStyle3">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">24sp</item>
     </style>
 
     <style name="HeaderButtonStyle">
@@ -26,6 +33,20 @@
         <item name="android:tint">@color/white</item>
     </style>
 
+    <style name="FooterButtonStyleYes">
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:tint">@color/yes</item>
+    </style>
+
+    <style name="FooterButtonStyleNo">
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:tint">@color/error_color</item>
+    </style>
+
     <style name="HeaderTextStyle2">
         <item name="android:textSize">30sp</item>
         <item name="android:textColor">@color/button_color</item>
@@ -36,20 +57,20 @@
 
     <style name="LabelTextStyle">
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/button_color</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="SpinnerStyle">
         <item name="android:background">@drawable/spinner_background</item>
-        <item name="android:popupBackground">@color/background_color</item>
+        <item name="android:popupBackground">@color/button_color</item>
         <item name="android:padding">5dp</item>
     </style>
 
     <style name="InputTextStyle">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/button_color</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
@@ -72,7 +93,7 @@
         <item name="android:textColor">@color/button_color</item>
         <item name="android:textSize">16sp</item>
         <item name="android:padding">12dp</item>
-        <item name="strokeColor">@color/button_color</item>
+        <item name="strokeColor">@color/error_color</item>
         <item name="cornerRadius">8dp</item>
     </style>
 
