--- a/FixMyRideApp/app/src/main/res/layout/activity_images.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_images.xml
@@ -78,11 +78,13 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:padding="8dp"
+        android:layout_margin="12dp"
         app:layout_constraintBottom_toTopOf="@id/footerLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerLayout2"
-        tools:listitem="@layout/item_image" />
+        tools:listitem="@layout/item_image"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/footerLayout2"
