--- a/FixMyRideApp/app/src/main/res/layout/activity_report.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_report.xml
@@ -15,7 +15,9 @@
             android:id="@+id/reportCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/text_secondary"
             android:elevation="4dp"
+            android:layout_marginTop="12dp"
             app:cardCornerRadius="16dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -25,35 +27,41 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <TextView
-                    android:id="@+id/titleText"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Vehicle Report"
-                    android:textSize="28sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/button_color"
-                    android:layout_marginBottom="24dp"/>
+                    android:gravity="center">
 
+                        <TextView
+                            android:id="@+id/titleText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Vehicle Report"
+                            android:textColor="@color/button_color"
+                            android:textSize="28sp"
+                            android:textStyle="bold"/>
+
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="8dp">
 
                     <TextView
                         android:id="@+id/brandLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Brand"
-                        style="@style/LabelTextStyle"/>
+                        style="@style/LabelTextOnWhiteBackgroundStyle"/>
 
                     <TextView
                         android:id="@+id/brandValue"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="17dp"
                         android:textSize="16sp"
                         android:textColor="@color/button_color"
                         android:textStyle="bold"/>
@@ -61,16 +69,24 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:orientation="horizontal"
+                    android:background="@color/black"
+                    android:layout_marginBottom="8dp">
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginBottom="16dp">
+                    android:layout_marginBottom="8dp">
 
                     <TextView
                         android:id="@+id/modelLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Model"
-                        style="@style/LabelTextStyle"/>
+                        style="@style/LabelTextOnWhiteBackgroundStyle"/>
 
                     <TextView
                         android:id="@+id/modelValue"
@@ -85,6 +101,14 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:orientation="horizontal"
+                    android:background="@color/black"
+                    android:layout_marginBottom="8dp">
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_marginBottom="24dp">
@@ -94,14 +118,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Year"
-                        style="@style/LabelTextStyle"/>
+                        style="@style/LabelTextOnWhiteBackgroundStyle"/>
 
                     <TextView
                         android:id="@+id/yearValue"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="28dp"
                         android:textSize="16sp"
                         android:textColor="@color/button_color"
                         android:textStyle="bold"/>
@@ -113,6 +137,7 @@
             android:id="@+id/damageCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/text_secondary"
             android:layout_marginTop="16dp"
             android:elevation="4dp"
             app:cardCornerRadius="16dp"
@@ -129,21 +154,30 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Damaged Parts"
-                    style="@style/LabelTextStyle"
+                    style="@style/LabelTextOnWhiteBackgroundStyle"
                     android:layout_marginBottom="16dp"/>
 
                 <TextView
                     android:id="@+id/damagedPartsRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/InputTextStyle"/>
+                    android:textStyle="bold"
+                    style="@style/InputTextOnWhiteBackgroundStyle"
+                    android:layout_marginBottom="8dp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:orientation="horizontal"
+                    android:background="@color/black">
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/estimatedCostLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Estimated Cost"
-                    style="@style/LabelTextStyle"
+                    style="@style/LabelTextOnWhiteBackgroundStyle"
                     android:layout_marginTop="24dp"
                     android:layout_marginBottom="8dp"/>
 
@@ -161,6 +195,7 @@
             android:id="@+id/linksCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/text_secondary"
             android:layout_marginTop="16dp"
             android:elevation="4dp"
             app:cardCornerRadius="16dp"
@@ -176,8 +211,8 @@
                     android:id="@+id/partsLinksLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Helpful Resources"
-                    style="@style/LabelTextStyle"
+                    android:text="Auto Parts Links"
+                    style="@style/LabelTextOnWhiteBackgroundStyle"
                     android:layout_marginBottom="16dp"/>
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -185,6 +220,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:orientation="horizontal"
+                    android:background="@color/black"
+                    android:layout_marginBottom="8dp">
+                </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/imagesRecyclerView"
@@ -200,8 +243,7 @@
             android:layout_marginTop="24dp"
             android:padding="16dp"
             android:text="Home"
-            android:textSize="16sp"
-            app:cornerRadius="8dp"
+            style="@style/PrimaryButtonStyle"
             app:layout_constraintTop_toBottomOf="@id/linksCard"/>
 
         <com.google.android.material.button.MaterialButton
@@ -209,14 +251,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:layout_marginBottom="25dp"
             android:padding="16dp"
             android:text="Delete Report"
-            android:textSize="16sp"
-            app:cornerRadius="8dp"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            app:strokeColor="@color/error_color"
-            android:textColor="@color/error_color"
-            app:layout_constraintTop_toBottomOf="@id/homeButton"/>
+            style="@style/PrimaryButtonRedStyle"
+            app:layout_constraintTop_toBottomOf="@id/homeButton"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
