--- a/FixMyRideApp/app/src/main/res/layout/activity_report_generation.xml
+++ b/FixMyRideApp/app/src/main/res/layout/activity_report_generation.xml
@@ -25,6 +25,8 @@
         android:id="@+id/vehicle_details_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="5dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
         app:cardBackgroundColor="@color/button_color"
@@ -100,6 +102,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="5dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
         app:cardBackgroundColor="@color/button_color"
@@ -136,13 +139,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                android:hint="Add a tag"
+                android:textColorHint="@color/white">
 
                 <AutoCompleteTextView
                     android:id="@+id/tagAutoCompleteTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Add a tag"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
                     android:inputType="text"
                     style="@style/InputTextStyle"/>
             </com.google.android.material.textfield.TextInputLayout>
@@ -155,7 +161,9 @@
         style="@style/NoteTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"
         android:layout_marginTop="16dp"
+        android:textStyle="bold"
         android:text="• If you think we missed something you can change it"
         app:layout_constraintTop_toBottomOf="@id/tags_card"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,17 +177,19 @@
         android:layout_height="wrap_content"
         android:text="Create Report"
         android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="5dp"
         app:layout_constraintTop_toBottomOf="@id/note"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_discard_report"
-        style="@style/SecondaryButtonStyle"
+        style="@style/PrimaryButtonRedStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Discard Unfinished Report"
         android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="5dp"
         app:layout_constraintTop_toBottomOf="@id/btn_create_report"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
