--- a/FixMyRideApp/app/src/main/res/layout/item_image.xml
+++ b/FixMyRideApp/app/src/main/res/layout/item_image.xml
@@ -1,6 +1,18 @@
-<android.widget.ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="350dp"
+    android:layout_height="350dp"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
+    android:layout_gravity="center">
+
+    <android.widget.ImageView
     android:id="@+id/imageView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="8dp"
     android:scaleType="centerCrop" />
+
+</androidx.cardview.widget.CardView>
