--- a/FixMyRideApp/app/src/main/res/values/styles.xml
+++ b/FixMyRideApp/app/src/main/res/values/styles.xml
@@ -62,6 +62,13 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="LabelTextOnWhiteBackgroundStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="SpinnerStyle">
         <item name="android:background">@drawable/spinner_background</item>
         <item name="android:popupBackground">@color/button_color</item>
@@ -71,6 +78,12 @@
     <style name="InputTextStyle">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <style name="InputTextOnWhiteBackgroundStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/button_color</item>
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
@@ -86,6 +99,15 @@
         <item name="android:textSize">16sp</item>
         <item name="android:padding">12dp</item>
         <item name="backgroundTint">@color/button_color</item>
+        <item name="cornerRadius">8dp</item>
+    </style>
+
+
+    <style name="PrimaryButtonRedStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">12dp</item>
+        <item name="backgroundTint">@color/error_color</item>
         <item name="cornerRadius">8dp</item>
     </style>
 
